--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Find some food!</h1>
+<p>Start typing the name of your desired snack:</p>
 
 <script type="text/javascript">
-<%#*$(document).ready(function(){%>
-  <%#*$("#food_input").keyup(function(){%>
-    <%#*$("#food_list").html("foobar");%>
-  <%#*});%>
-<%#*});%>
   ajax_input();
 </script>
-<button>Click me! </button>
 <input type="text" id="food_input"> </input>
 <div id="food_list">Howdy</div>
