cleaned up the home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,4 +5,4 @@
   ajax_input();
 </script>
 <input type="text" id="food_input"> </input>
-<div id="food_list">Howdy</div>
+<div id="food_list"></div>
